// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphvizWasmAdapter: > computedAmazonView 1`] = `
{
  "_layout": "auto",
  "_stage": "layouted",
  "_type": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 281,
    "width": 937,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "color": "gray",
      "dotpos": "s,359.66,151.2 e,577.02,151.2 370.61,151.2 433.22,151.2 504.06,151.2 566.65,151.2",
      "head": "normal",
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 416,
        "y": 125,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          371,
          151,
        ],
        [
          433,
          151,
        ],
        [
          504,
          151,
        ],
        [
          567,
          151,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon.s3",
    },
  ],
  "hash": "b038953ca958a69a2a5b2f1b2c72f6c0a47e0624",
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "height": 265,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": "cloud",
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "cloud",
      "width": 384,
      "x": 8,
      "y": 8,
    },
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labelBBox": {
        "height": 24,
        "width": 82,
        "x": 119,
        "y": 74,
      },
      "level": 1,
      "links": null,
      "modelRef": "cloud.backend",
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Backend",
      "width": 320,
      "x": 40,
      "y": 61,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": {
        "txt": "Amazon is a cloud provider",
      },
      "height": 265,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 52,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": "amazon",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Amazon",
      "width": 384,
      "x": 545,
      "y": 8,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "S3 is a storage service",
      },
      "height": 180,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 48,
        "width": 156,
        "x": 82,
        "y": 63,
      },
      "level": 1,
      "links": null,
      "modelRef": "amazon.s3",
      "outEdges": [],
      "parent": "amazon",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "S3",
      "width": 320,
      "x": 577,
      "y": 61,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
}
`;

exports[`GraphvizWasmAdapter: > computedCloud3levels 1`] = `
{
  "_stage": "layouted",
  "_type": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 949,
    "width": 1375,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "color": "gray",
      "dotpos": "e,228,332.26 228,179.87 228,223.7 228,276.72 228,321.86",
      "head": "normal",
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 229,
        "y": 240,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          228,
          180,
        ],
        [
          228,
          224,
        ],
        [
          228,
          277,
        ],
        [
          228,
          322,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "color": "gray",
      "dotpos": "e,658,332.26 658,179.87 658,223.7 658,276.72 658,321.86",
      "head": "normal",
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 659,
        "y": 240,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          658,
          180,
        ],
        [
          658,
          224,
        ],
        [
          658,
          277,
        ],
        [
          658,
          322,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "color": "gray",
      "dotpos": "e,353.14,680.87 552.95,511.86 494.25,561.51 421.08,623.4 361.13,674.11",
      "head": "normal",
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with 
sso authentification",
      "labelBBox": {
        "height": 34,
        "width": 239,
        "x": 479,
        "y": 572,
      },
      "line": "dashed",
      "parent": "cloud",
      "points": [
        [
          553,
          512,
        ],
        [
          494,
          562,
        ],
        [
          421,
          623,
        ],
        [
          361,
          674,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "color": "gray",
      "dotpos": "e,242.87,680.87 233.12,511.86 235.92,560.29 239.38,620.37 242.27,670.36",
      "head": "normal",
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 18,
        "width": 80,
        "x": 240,
        "y": 580,
      },
      "line": "dashed",
      "parent": "cloud",
      "points": [
        [
          233,
          512,
        ],
        [
          236,
          560,
        ],
        [
          239,
          620,
        ],
        [
          242,
          670,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "color": "gray",
      "dotpos": "s,838.75,770.8 e,1055.2,770.8 849.67,770.8 912.09,770.8 982.57,770.8 1044.9,770.8",
      "head": "normal",
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 894,
        "y": 745,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          850,
          771,
        ],
        [
          912,
          771,
        ],
        [
          983,
          771,
        ],
        [
          1045,
          771,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "target": "amazon",
    },
    {
      "color": "gray",
      "dotpos": "e,517.15,770.8 407.99,770.8 440.97,770.8 473.94,770.8 506.92,770.8",
      "head": "normal",
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labelBBox": null,
      "line": "dashed",
      "parent": "cloud.backend",
      "points": [
        [
          408,
          771,
        ],
        [
          441,
          771,
        ],
        [
          474,
          771,
        ],
        [
          507,
          771,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
  ],
  "hash": "d751dec82be7d5259fc5d15e926ca47a1ff4e69e",
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 24,
        "width": 86,
        "x": 117,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "modelRef": "customer",
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "customer",
      "width": 320,
      "x": 68,
      "y": 0,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Support engineers are responsible for supporting customers",
      },
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 66,
        "width": 255,
        "x": 33,
        "y": 54,
      },
      "level": 0,
      "links": null,
      "modelRef": "support",
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
      "x": 498,
      "y": 0,
    },
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.adminPanel",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "height": 670,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": "cloud",
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "cloud",
      "width": 910,
      "x": 8,
      "y": 271,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "The customer dashboard is a webapp that allows customers to view their data.",
      },
      "height": 180,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 66,
        "width": 284,
        "x": 18,
        "y": 54,
      },
      "level": 1,
      "links": null,
      "modelRef": "cloud.frontend.dashboard",
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 320,
      "x": 68,
      "y": 332,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "The admin panel is a webapp that allows support staff to manage customer data.",
      },
      "height": 180,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 66,
        "width": 275,
        "x": 23,
        "y": 54,
      },
      "level": 1,
      "links": null,
      "modelRef": "cloud.frontend.adminPanel",
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 320,
      "x": 498,
      "y": 332,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "height": 281,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 15,
        "width": 59,
        "x": 6,
        "y": 0,
      },
      "level": 1,
      "links": null,
      "modelRef": "cloud.backend",
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Backend",
      "width": 830,
      "x": 48,
      "y": 620,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Component that allows to query data via GraphQL.",
      },
      "height": 180,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 65,
        "width": 272,
        "x": 24,
        "y": 54,
      },
      "level": 2,
      "links": null,
      "modelRef": "cloud.backend.graphql",
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Graphql API",
      "width": 320,
      "x": 88,
      "y": 681,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "The backend storage is a component that stores data.",
      },
      "height": 180,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 65,
        "width": 280,
        "x": 20,
        "y": 54,
      },
      "level": 2,
      "links": null,
      "modelRef": "cloud.backend.storage",
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "shape": "storage",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Backend Storage",
      "width": 320,
      "x": 518,
      "y": 681,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Amazon is a cloud provider",
      },
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 185,
        "x": 68,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "modelRef": "amazon",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Amazon",
      "width": 320,
      "x": 1055,
      "y": 681,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`GraphvizWasmAdapter: > computedCloudView 1`] = `
{
  "_stage": "layouted",
  "_type": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 560,
    "width": 1529,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "color": "gray",
      "dotpos": "e,317.2,332.26 217.92,179.87 246.84,224.26 281.89,278.06 311.54,323.57",
      "head": "normal",
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 269,
        "y": 240,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          218,
          180,
        ],
        [
          247,
          224,
        ],
        [
          282,
          278,
        ],
        [
          312,
          324,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "color": "gray",
      "dotpos": "e,432.84,332.26 532.12,179.87 503.2,224.26 468.15,278.06 438.5,323.57",
      "head": "normal",
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 490,
        "y": 240,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          532,
          180,
        ],
        [
          503,
          224,
        ],
        [
          468,
          278,
        ],
        [
          439,
          324,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "color": "gray",
      "dotpos": "e,672.27,422 534.86,422 575.91,422 620.22,422 661.77,422",
      "head": "normal",
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 18,
        "width": 25,
        "x": 591,
        "y": 395,
      },
      "line": "dashed",
      "parent": "cloud",
      "points": [
        [
          535,
          422,
        ],
        [
          576,
          422,
        ],
        [
          620,
          422,
        ],
        [
          662,
          422,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "color": "gray",
      "dotpos": "s,991.68,422 e,1209,422 1002.6,422 1065.2,422 1136.1,422 1198.7,422",
      "head": "normal",
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 1048,
        "y": 396,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          1003,
          422,
        ],
        [
          1065,
          422,
        ],
        [
          1136,
          422,
        ],
        [
          1199,
          422,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "target": "amazon",
    },
  ],
  "hash": "ae5f26f9d79696739b08b98885dcc5215200b0b2",
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 24,
        "width": 86,
        "x": 117,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "modelRef": "customer",
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "customer",
      "width": 320,
      "x": 0,
      "y": 0,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Support engineers are responsible for supporting customers",
      },
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 66,
        "width": 255,
        "x": 33,
        "y": 54,
      },
      "level": 0,
      "links": null,
      "modelRef": "support",
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
      "x": 430,
      "y": 0,
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "height": 281,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 15,
        "width": 43,
        "x": 6,
        "y": 0,
      },
      "level": 0,
      "links": null,
      "modelRef": "cloud",
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "cloud",
      "width": 857,
      "x": 175,
      "y": 271,
    },
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "cloud.frontend",
      "inEdges": [
        "customer:cloud.frontend",
        "support:cloud.frontend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 24,
        "width": 84,
        "x": 118,
        "y": 74,
      },
      "level": 1,
      "links": null,
      "modelRef": "cloud.frontend",
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "shape": "browser",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Frontend",
      "width": 320,
      "x": 215,
      "y": 332,
    },
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labelBBox": {
        "height": 24,
        "width": 82,
        "x": 119,
        "y": 74,
      },
      "level": 1,
      "links": null,
      "modelRef": "cloud.backend",
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Backend",
      "width": 320,
      "x": 672,
      "y": 332,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Amazon is a cloud provider",
      },
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 48,
        "width": 185,
        "x": 68,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "modelRef": "amazon",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Amazon",
      "width": 320,
      "x": 1209,
      "y": 332,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`GraphvizWasmAdapter: > computedIndexView 1`] = `
{
  "_stage": "layouted",
  "_type": "element",
  "autoLayout": {
    "direction": "TB",
  },
  "bounds": {
    "height": 503,
    "width": 1072,
    "x": 0,
    "y": 0,
  },
  "description": null,
  "edges": [
    {
      "color": "gray",
      "dotpos": "s,534.68,412.8 e,752.04,412.8 545.63,412.8 608.24,412.8 679.08,412.8 741.67,412.8",
      "head": "normal",
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 18,
        "width": 105,
        "x": 591,
        "y": 387,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          546,
          413,
        ],
        [
          608,
          413,
        ],
        [
          679,
          413,
        ],
        [
          742,
          413,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "target": "amazon",
    },
    {
      "color": "gray",
      "dotpos": "e,315.49,322.97 219.62,179.93 247.59,221.66 280.98,271.49 309.64,314.24",
      "head": "normal",
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 18,
        "width": 111,
        "x": 275,
        "y": 240,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          220,
          180,
        ],
        [
          248,
          222,
        ],
        [
          281,
          271,
        ],
        [
          310,
          314,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "color": "gray",
      "dotpos": "e,434.55,322.97 530.42,179.93 502.45,221.66 469.06,271.49 440.4,314.24",
      "head": "normal",
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 18,
        "width": 62,
        "x": 490,
        "y": 240,
      },
      "line": "dashed",
      "parent": null,
      "points": [
        [
          530,
          180,
        ],
        [
          502,
          222,
        ],
        [
          469,
          271,
        ],
        [
          440,
          314,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
  ],
  "hash": "a7e8b58fed2c69c756bf4d0cab743a0002a24e2a",
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 24,
        "width": 86,
        "x": 117,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "modelRef": "customer",
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "customer",
      "width": 320,
      "x": 0,
      "y": 0,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Support engineers are responsible for supporting customers",
      },
      "height": 180,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labelBBox": {
        "height": 66,
        "width": 255,
        "x": 33,
        "y": 54,
      },
      "level": 0,
      "links": null,
      "modelRef": "support",
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "shape": "person",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Support Engineer",
      "width": 320,
      "x": 430,
      "y": 0,
    },
    {
      "children": [],
      "color": "primary",
      "height": 180,
      "id": "cloud",
      "inEdges": [
        "customer:cloud",
        "support:cloud",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 24,
        "width": 52,
        "x": 134,
        "y": 74,
      },
      "level": 0,
      "links": null,
      "modelRef": "cloud",
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "cloud",
      "width": 320,
      "x": 215,
      "y": 323,
    },
    {
      "children": [],
      "color": "primary",
      "description": {
        "txt": "Amazon is a cloud provider",
      },
      "height": 180,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labelBBox": {
        "height": 47,
        "width": 185,
        "x": 68,
        "y": 63,
      },
      "level": 0,
      "links": null,
      "modelRef": "amazon",
      "outEdges": [],
      "parent": null,
      "shape": "rectangle",
      "style": {
        "opacity": 15,
        "size": "md",
      },
      "tags": [],
      "technology": null,
      "title": "Amazon",
      "width": 320,
      "x": 752,
      "y": 323,
    },
  ],
  "tags": null,
  "title": "",
}
`;
